# pqrequests

./: README.md
requests_pqc/: README.md  pyproject.toml  requests_pqc.py  requirements.txt  setup.py  test_pqc.py
requests_pqc/backup/: requests_pqc_backup.py
requests_pqc/examples/: default_tls.py  hybrid.py  pqc_only.py  test_delete.py  test_get.py  test_post.py  test_put_patch.py
requests_pqc/requests_pqc/: __init__.py  adapters.py  algorithms.py  exceptions.py  session.py  ssl_context.py
requests_pqc/test/: pq_server.crt  pq_server.key  server.py
requests_pqc/tests/: run_tests.py
