[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requests_pqc"
version = "0.1.0"
description = "A requests-like wrapper for PQC-enabled curl"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [] # No external Python dependencies since we use subprocess

[tool.setuptools]
py-modules = ["requests_pqc"]
