[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requests_pqc"
version = "0.1.1"
description = "A requests-like wrapper for PQC-enabled curl supporting ML-KEM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Anjaneya Rakesh, Mahanthi", email = "amahanthi3@gatech.edu"}
]
keywords = ["pqc", "post-quantum", "cryptography", "ml-kem", "curl", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/RakeshMahanthi/pqrequests"
"Bug Tracker" = "https://github.com/RakeshMahanthi/pqrequests/issues"

[tool.setuptools]
py-modules = ["requests_pqc"]
